Finished the implementation of the about command. Changed the version in the Server.java to the current version. Fixed bug in the server gui where the user gets an IndexOutOfBoundsException (when executing the about command) by rewriting the appendText methode.